alteração do git ignore para evitar envio de dados errados

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
-Redes Neurais/Mini Projeto 02 Redes neurais/DL_Mestrado/
+Redes Neurais/Mini Projeto 03 Redes neurais/DL_Mestrado/
 Redes Neurais/miniprojeto02/DL_Mestrado/
+Redes Neurais/Mini Projeto 03 Redes neurais/data/
