inicialização mini projeto 06 redes neurais

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 Redes Neurais/Mini Projeto 03 Redes neurais/DL_Mestrado/
 Redes Neurais/miniprojeto02/DL_Mestrado/
 Redes Neurais/Mini Projeto 03 Redes neurais/data/
+Redes Neurais/mini projeto 06/data
