Projeto de Redes neurais

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ Redes Neurais/Mini Projeto 03 Redes neurais/DL_Mestrado/
 Redes Neurais/miniprojeto02/DL_Mestrado/
 Redes Neurais/Mini Projeto 03 Redes neurais/data/
 Redes Neurais/mini projeto 06/data
+Redes Neurais/Projetao/dataset_treino
+Redes Neurais/Projetao/simpson_testset
+Redes Neurais/Projetao/simpsons_dataset
+Redes Neurais/Projetao/testset_simpsons
