salvando as redes neurais

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Redes Neurais/Projetao/dataset_treino
 Redes Neurais/Projetao/simpson_testset
 Redes Neurais/Projetao/simpsons_dataset
 Redes Neurais/Projetao/testset_simpsons
+Redes Neurais/Projetao/redes/vgg16.pth
