atualização do meu gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Redes Neurais/Projetao/simpson_testset
 Redes Neurais/Projetao/simpsons_dataset
 Redes Neurais/Projetao/testset_simpsons
 Redes Neurais/Projetao/redes/vgg16.pth
+Processamento_imagens/data
