--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Redes Neurais/Projetao/simpsons_dataset
 Redes Neurais/Projetao/testset_simpsons
 Redes Neurais/Projetao/redes/vgg16.pth
 Processamento_imagens/aula04/data
+Processamento_imagens/mini_prog_1va/processamento_imagens
