subindo a fase inicial do projeto de PI

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Redes Neurais/Projetao/testset_simpsons
 Redes Neurais/Projetao/redes/vgg16.pth
 Processamento_imagens/aula04/data
 Processamento_imagens/mini_prog_1va/processamento_imagens
+Processamento_imagens/projeto bolado/Data
