--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ Redes Neurais/Projetao/redes/vgg16.pth
 Processamento_imagens/aula04/data
 Processamento_imagens/mini_prog_1va/processamento_imagens
 Processamento_imagens/projeto bolado/Data
+Processamento_imagens/projeto bolado/historico_treinamento_cnn.json
+Processamento_imagens/projeto bolado/historico_treinamento_mlp.json
+Processamento_imagens/projeto bolado/modelo_cnn.h5
+Processamento_imagens/projeto bolado/modelo_mlp.h5
+
