otimização do tamanho dos arquivos

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Processamento_imagens/projeto bolado/historico_treinamento_cnn.json
 Processamento_imagens/projeto bolado/historico_treinamento_mlp.json
 Processamento_imagens/projeto bolado/modelo_cnn.h5
 Processamento_imagens/projeto bolado/modelo_mlp.h5
+Extencao/Post_01/venv
