--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ Processamento_imagens/projeto bolado/historico_treinamento_mlp.json
 Processamento_imagens/projeto bolado/modelo_cnn.h5
 Processamento_imagens/projeto bolado/modelo_mlp.h5
 Extencao/Post_01/venv
+Computacao_Dados/Projeto_2/Crime_Data_from_2020_to_Present.csv
