--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ Processamento_imagens/projeto bolado/modelo_cnn.h5
 Processamento_imagens/projeto bolado/modelo_mlp.h5
 Extencao/Post_01/venv
 Computacao_Dados/Projeto_FINAL/Crime_Data_from_2020_to_Present.csv
+Computacao_Dados/Prova Final/.RData
+Computacao_Dados/Prova Final/bdims.RData
+Computacao_Dados/Prova Final/flu.csv
