--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ Computacao_Dados/Projeto_FINAL/Crime_Data_from_2020_to_Present.csv
 Computacao_Dados/Prova Final/.RData
 Computacao_Dados/Prova Final/bdims.RData
 Computacao_Dados/Prova Final/flu.csv
+pasta_pessoal/paginaPessoal/.env
+pasta_pessoal/paginaPessoal/serviceAccountKey.json
