--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ Processamento_imagens/preprocessamento_cnn_mlp/historico_treinamento_cnn.json
 Processamento_imagens/preprocessamento_cnn_mlp/historico_treinamento_mlp.json
 Processamento_imagens/preprocessamento_cnn_mlp/modelo_cnn.h5
 Processamento_imagens/preprocessamento_cnn_mlp/modelo_mlp.h5
+Processamento_imagens/projeto bolado
 
 # Extensão
 Extencao/Post_01/venv
