--- a/Testes_Software/Sudoku/.vscode/settings.json
+++ b/Testes_Software/Sudoku/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "python.testing.pytestArgs": [
-        "."
+        "venv"
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true
